# ORM-Performance-Test

./: .gitignore  PERFORMANCE_RESULTS.md  PERFORMANCE_TEST_GUIDE.md  QUICK_START.md  README.md  pyproject.toml
apps/: __init__.py
apps/edgedb_app/: __init__.py  database.py  main.py  models.py  schema.esdl
apps/edgedb_app/apis/: benchmark.py  health.py  posts.py  users.py
apps/edgedb_app/queries/post/: create_post_async_edgeql.py  get_posts_async_edgeql.py
apps/edgedb_app/queries/user/: get_user_async_edgeql.py  get_user_posts_async_edgeql.py  get_users_async_edgeql.py  insert_user_async_edgeql.py
apps/edgedb_app/schemas/: __init__.py  frozen_config.py  post.py  user.py
apps/edgedb_app/services/: benchmark_service.py  post_service.py  user_service.py
apps/sqlalchemy_app/: __init__.py  database.py  main.py  models.py
apps/sqlalchemy_app/apis/: benchmark.py  health.py  posts.py  users.py
apps/sqlalchemy_app/schemas/: __init__.py  frozen_config.py  user.py
apps/sqlalchemy_app/services/: benchmark_service.py  post_service.py  user_service.py
apps/tortoise_app/: __init__.py  database.py  main.py  models.py
apps/tortoise_app/apis/: benchmark.py  health.py  posts.py  users.py
apps/tortoise_app/schemas/: post.py
apps/tortoise_app/services/: benchmark_service.py  post_service.py  user_service.py
dbschema/: default.esdl
scripts/: start_servers.sh  stop_servers.sh
tests/locust_tests/: __init__.py  locust_test.py  locustfile.py  run_performance_test.py
